--- a/style.css
+++ b/style.css
@@ -1,7 +1,3 @@
-#map {
-  height: 100%;
-}
-
 html, body {
   height: 100%;
   width: 100%;
@@ -13,49 +9,50 @@ html, body {
   height: 100%;
   width: 100%;
   margin: 0;
-  padding: 0;
+  padding: 10px;
   display: flex;
   flex-direction: row;
 }
 
 .menu-div {
-  height: 90%;
-  width: 90%;
-  margin: 0;
+  height: 100%;
+  width: 30%;
+  margin: 10px;
   padding: 0;
-  border: 2px solid black;
   display: flex;
   flex-direction: column;
 }
 
 .content-div {
-  height: 90%;
-  width: 90%;
-  margin: 0;
-  padding: 0;
-  border: 2px solid black;
+  height: 100%;
+  width: 100%;
   display: flex;
   flex-direction: row;
 }
 
 .map-div {
-  height: 90%;
-  width: 95%;
-  
+  height: 85%;
+  width: 100%;
+  border: 1px solid black;
+  margin: 20px;
 }
 
 .trucks-div {
-  margin: 15px;
+  margin-bottom: 30px;
   font-size: x-large;
   
 }
 
 .drivers-div {
-  margin: 15px;
+  margin-bottom: 30px;
   font-size: x-large;
 }
 
 .bookings-div {
-  margin: 15px;
+  margin-bottom: 30px;
   font-size: x-large;
+}
+
+.label {
+  margin: 10px;
 }
