--- a/style.css
+++ b/style.css
@@ -65,4 +65,10 @@ html, body {
   align-items: center;
   border: 1px solid black;
   height: 150px;
+  width: 300px;
+}
+
+.contentItems-div {
+  width: 100%;
+  height: 100%;
 }
