--- a/style.css
+++ b/style.css
@@ -9,19 +9,22 @@ html, body {
   height: 100%;
   width: 100%;
   margin: 0;
-  padding: 10px;
   display: flex;
   flex-direction: row;
-  background-color: lightblue;
+  background-color: azure;
 }
 
 .menu-div {
   height: 100%;
   width: 30%;
-  margin: 10px;
-  padding: 10px;
   display: flex;
   flex-direction: column;
+  background-color: teal;
+  color: aliceblue;
+  border: 1px;
+  padding: 10px;
+  border-style: solid;
+  border-color: black;
 }
 
 .content-div {
@@ -33,26 +36,39 @@ html, body {
 }
 
 .map-div {
-  height: 85%;
-  width: 80%;
-  border: 1px solid black;
+  height: 90%;
+  width: 100%;
+  border: 1px;
+  border-style: solid;
+  border-color: white;
   margin: 20px;
 }
 
 .trucks-div {
   margin-bottom: 30px;
   font-size: x-large;
-  
+  border: 1px;
+  border-style: solid;
+  border-color: white;
+  padding: 15px;
 }
 
 .drivers-div {
   margin-bottom: 30px;
   font-size: x-large;
+  border: 1px;
+  border-style: solid;
+  border-color: white;
+  padding: 15px;
 }
 
 .orders-div {
   margin-bottom: 30px;
   font-size: x-large;
+  border: 1px;
+  border-style: solid;
+  border-color: white;
+  padding: 15px;
 }
 
 .label {
@@ -68,6 +84,8 @@ html, body {
   border: 1px solid black;
   height: 170px;
   width: 350px;
+  background-color: powderblue;
+  border-radius: 15px;
 }
 
 .order-div {
@@ -79,6 +97,8 @@ html, body {
   border: 1px solid black;
   height: 130px;
   width: 300px;
+  background-color: powderblue;
+  border-radius: 15px;
 }
 
 .driver-div {
@@ -90,8 +110,15 @@ html, body {
   border: 1px solid black;
   height: 140px;
   width: 280px;
+  background-color: powderblue;
+  border-radius: 15px;
 }
 
+
+.contentItems-div {
+  width: 100%;
+  height: 100%;
+}
 
 .newOrder-div {
   display: flex;
@@ -102,11 +129,9 @@ html, body {
   border: 1px solid black;
   height: 40%;
   width: 40%;
-}
-
-.contentItems-div {
-  width: 100%;
-  height: 100%;
+  background-color: steelblue;
+  color: azure;
+  
 }
 
 .newOrder-button {
@@ -114,6 +139,7 @@ html, body {
   width: 180px;
   margin: 15px;
   padding: 20px;
+  background-color: steelblue;
 }
 
 .newOrderDestination-div {
