--- a/style.css
+++ b/style.css
@@ -8,7 +8,6 @@ html, body {
 .main-div {
   height: 100%;
   width: 100%;
-  margin: 0;
   display: flex;
   flex-direction: row;
   background-color: azure;
@@ -19,7 +18,7 @@ html, body {
   width: 30%;
   display: flex;
   flex-direction: column;
-  background-color: teal;
+  background-color: steelblue;
   color: aliceblue;
   border: 1px;
   padding: 10px;
@@ -82,8 +81,8 @@ html, body {
   padding: 20px;
   align-items: center;
   border: 1px solid black;
-  height: 170px;
-  width: 350px;
+  height: 20%;
+  width: 85%;
   background-color: powderblue;
   border-radius: 15px;
 }
@@ -95,8 +94,8 @@ html, body {
   padding: 20px;
   align-items: center;
   border: 1px solid black;
-  height: 130px;
-  width: 300px;
+  height: 20%;
+  width: 100%;
   background-color: powderblue;
   border-radius: 15px;
 }
@@ -108,16 +107,20 @@ html, body {
   padding: 20px;
   align-items: center;
   border: 1px solid black;
-  height: 140px;
-  width: 280px;
+  height: 20%;
+  width: 85%;
   background-color: powderblue;
   border-radius: 15px;
 }
 
-
 .contentItems-div {
   width: 100%;
   height: 100%;
+}
+
+.container-div {
+  display: flex;
+  flex-direction: column;
 }
 
 .newOrder-div {
@@ -139,7 +142,7 @@ html, body {
   width: 180px;
   margin: 15px;
   padding: 20px;
-  background-color: steelblue;
+  background-color: azure;
 }
 
 .newOrderDestination-div {
