--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ html, body {
 }
 
 .menu-div {
-  height: 100%;
+  height: auto;
   width: 30%;
   display: flex;
   flex-direction: column;
@@ -81,8 +81,8 @@ html, body {
   padding: 20px;
   align-items: center;
   border: 1px solid black;
-  height: 25%;
-  width: 85%;
+  height: auto;
+  width: auto;
   background-color: powderblue;
   border-radius: 15px;
 }
@@ -94,8 +94,8 @@ html, body {
   padding: 20px;
   align-items: center;
   border: 1px solid black;
-  height: 20%;
-  width: 80%;
+  height: auto;
+  width: auto;
   background-color: powderblue;
   border-radius: 15px;
 }
@@ -107,8 +107,8 @@ html, body {
   padding: 20px;
   align-items: center;
   border: 1px solid black;
-  height: 20%;
-  width: 85%;
+  height: auto;
+  width: auto;
   background-color: powderblue;
   border-radius: 15px;
 }
@@ -120,6 +120,7 @@ html, body {
 
 .container-div {
   width: 100%;
+  align-items: center;
   display: flex;
   flex-direction: column;
 }
@@ -140,7 +141,7 @@ html, body {
 
 .newOrder-button {
   height: 15px;
-  width: 180px;
+  width: auto;
   margin: 15px;
   padding: 20px;
   background-color: azure;
